--- a/src/app/Shared/layout/navbar/navbar.component.html
+++ b/src/app/Shared/layout/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-  <nav class="navbar navbar-expand-lg navbar-white bg-white fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
     <div class="container">
     <a class="navbar-brand fs-1" routerLink="">
       <p>ARTIPS</p>
