--- a/src/app/Pages/dashboard/editpage/editpage.component.html
+++ b/src/app/Pages/dashboard/editpage/editpage.component.html
@@ -13,10 +13,11 @@
               formControlName="name"
               class="form-control p-4"
               id="validationDefault01"
-              placeholder="Enter a name"
+              placeholder={{user}}
               value="genius"
               required
             />
+            
           </div>
           <div class="col-12 mt-4">
             <label for="validationDefault02" class="form-label"
