--- a/src/app/Pages/dashboard/dashboard.component.html
+++ b/src/app/Pages/dashboard/dashboard.component.html
@@ -84,12 +84,46 @@
   ></div>
 
   <div class="row">
+    <div class="col-12 col-md-4 col-lg-3 mb-4" *ngFor="let item of allProducts; let i = index">
+      <img src={{item.image}} class="card-img" alt="">
+      <h4 >{{item.name}}</h4>
+      <!-- <p>{{item.description}}</p> -->
+      <p>{{item.price}}</p>
+
+
+      <button
+      class="btn btn-outline-primary btn-sm me-2"
+      type="button"
+      data-bs-toggle="modal"
+      data-bs-target="#staticBackdrop"
+      (click)="Edit()"
+    >
+      <i class="fa-solid fa-pen-to-square"></i>
+    </button>
+
+    <button class="btn btn-outline-danger" type="button" (click)="Delete(template)">
+      <i class="fa-solid fa-trash-can"></i>
+    </button>
+    <ng-template #template>
+      <div class="modal-body text-center">
+        <p>Do you want to confirm?</p>
+        <button type="button" class="btn btn-default" (click)="confirm(i)" >Yes</button>
+        <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
+      </div>
+    </ng-template>
+  </div>
+    
+  </div>
+
+  <!-- Products goes here -->
+
+  <!-- <div class="row">
     <div class="col-12 col-md-6 col-lg-3 mb-4" *ngFor="let product of products; let i = index">
 
       <div class="col-12 bg-light border shadow border-light rounded p-5" >
         <img [src]="product.image" class="card-img-top mt-5" alt="images" />
         <h5 class="card-title mt-2 col-12 fs-3" style="color: burlywood;">{{ product.name }}</h5>
-        <!-- <h5 class="card-title text-danger">{{ product.description }}</h5> -->
+       
         <h5 class="card-title fs-6" style="color: black;">{{ product.price }}</h5>
         <div class="card-body d-flex justify-content-between mt-3">
           <div class="col-6"></div>
@@ -107,7 +141,7 @@
           <button class="btn btn-outline-danger" type="button" (click)="Delete(template)">
             <i class="fa-solid fa-trash-can"></i>
           </button>
-          <!-- <pre class="card card-block card-header">{{message}}</pre> -->
+       
 <ng-template #template>
   <div class="modal-body text-center">
     <p>Do you want to confirm?</p>
@@ -118,7 +152,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <div class="mt-5">
